--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "next": "14.0.3",
+    "next-fonts": "^1.5.1",
     "react": "^18",
     "react-dom": "^18"
   },
