--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@heroicons/react": "^2.1.1",
     "next": "14.0.3",
     "next-fonts": "^1.5.1",
+    "next-images": "^1.8.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
